force-app/main/default/objects/Account/fields/Tipo_de_empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_empresa__c</fullName>
    <label>Tipo de empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ETO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MTO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>MTS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>TS</label>
            </value>
            <value>
                <fullName>175540000</fullName>
                <label>OTROS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>