force-app/main/default/objects/Account/fields/Topline__c.field-meta.xml
<CustomField>
    <fullName>Topline__c</fullName>
    <label>Topline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>175540000</fullName>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>175540001</fullName>
                <label>Reservado IB</label>
            </value>
            <value>
                <fullName>175540002</fullName>
                <label>Reservado Otros</label>
            </value>
            <value>
                <fullName>175540004</fullName>
                <label>SAM Account</label>
            </value>
            <value>
                <fullName>175540005</fullName>
                <label>Educacional</label>
            </value>
            <value>
                <fullName>175540006</fullName>
                <label>Start up</label>
            </value>
            <value>
                <fullName>175540007</fullName>
                <label>Alquiler</label>
            </value>
            <value>
                <fullName>175540003</fullName>
                <label>N/C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>