force-app/main/default/objects/Account/fields/Validacion__c.field-meta.xml
<CustomField>
    <fullName>Validacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Un administrador valida que los datos son correctos y que no está duplicado</description>
    <label>Validación</label>
    <type>Checkbox</type>
</CustomField>