force-app/main/default/objects/Account/fields/Vector_1__c.field-meta.xml
<CustomField>
    <fullName>Vector_1__c</fullName>
    <label>Vector 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>