force-app/main/default/objects/Account/fields/Vector_2__c.field-meta.xml
<CustomField>
    <fullName>Vector_2__c</fullName>
    <label>Vector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>