force-app/main/default/objects/Account/fields/Vector_3__c.field-meta.xml
<CustomField>
    <fullName>Vector_3__c</fullName>
    <label>Vector 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>