force-app/main/default/objects/Account/recordTypes/Cuarentena.recordType-meta.xml
<RecordType>
    <fullName>Cuarentena</fullName>
    <active>true</active>
    <label>Cuarentena</label>
</RecordType>