force-app/main/default/objects/Account/validationRules/Sector_Subsector_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Sector_Subsector_Obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,
				$User.Username &lt;&gt; &quot;javier.ponce@gestion.ayesa.com&quot;,


				ISBLANK(TEXT(Sector__c))



)</errorConditionFormula>
    <errorMessage>Informe Sector y Subsector</errorMessage>
</ValidationRule>